Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2019-01-02 01:35:03+08:00 Asia/Kuala_Lumpur
    GatherPrune not fruitful - turns out that explicitly excluding
    dist.ini means that the resulting distribution does not include
    dist.ini, to my great surprise and consternation (thanks Grinnz)

0.001     2019-01-02 00:15:10+08:00 Asia/Kuala_Lumpur
    Initial version.