@@ -5,67 +5,4 @@ copyright_holder = Tom Molesworth
 copyright_year   = 2019
 main_module	= lib/Dist/Zilla/PluginBundle/Author/TEAM.pm
 
-[Git::GatherDir]
-exclude_filename = Makefile.PL
-[Prereqs::FromCPANfile]
-[Prereqs / BuildRequires]
-perl = 5.014000
-[CheckPrereqsIndexed]
-[CheckExtraTests]
-[VersionFromModule]
-[ReversionOnRelease]
-[NextRelease]
-[OurPkgVersion]
-[GitHub::Meta]
-repo = team-at-cpan/Dist-Zilla-PluginBundle-Author-TEAM
-remote = github
-;[PrePAN]
-;author = http://prepan.org/user/TEAM
-; module = http://prepan.org/module/...
-[InstallGuide]
-; Does not play nicely with InsertExample
-; [Test::EOL]
-[InsertExample]
-[PodInherit]
-[PodSyntaxTests]
-[MojibakeTests]
-[Test::CheckDeps]
-[Test::Compile]
-; [Test::Synopsis]
-[Test::Version]
-; Broken - https://rt.cpan.org/Ticket/Display.html?id=78729
-; [Test::Pod::LinkCheck]
-; [PodCoverageTests]
-; [Test::UnusedVars]
-; [Signature]
-[SpellingCommonMistakesTests]
-[Test::ReportPrereqs]
-[CopyFilesFromRelease]
-copy = Makefile.PL
-[License]
-[Readme]
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[MakeMaker]
-eumm_version = 6.48
-prereq_fatal = 1
-[ExecDir]
-[ShareDir]
-[Manifest]
-[CheckChangesHasContent]
-[TestRelease]
-[ConfirmRelease]
-[Git::Commit]
-allow_dirty = dist.ini
-allow_dirty = cpanfile
-allow_dirty = Changes
-allow_dirty = Makefile.PL
-[Git::Tag]
-tag_format = v%v
-tag_message = Tag v%v for CPAN release
-[UploadToCPAN]
-[ArchiveRelease]
-directory = /home/tom/dev/CPAN-Archive
-
+[@Author::TEAM]
