@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    Disables the No404s test, since some distributions can have
+    thousands of links and the test is rarely useful.
+
+    Also includes the $AUTHORITY info by default now.
 
 0.002     2019-01-02 01:35:03+08:00 Asia/Kuala_Lumpur
     GatherPrune not fruitful - turns out that explicitly excluding
